# sarasvatipipeline

./: .gitignore  LICENSE  README.md  main.bat  pyproject.toml  requirements.txt
docs/: webapi_rest_get_tabular_trend.py  webapi_rest_get_tabular_trend_custom.py
projects/: default-project.toml
projects/eds_to_rjn/code/: aggregator.py  collector.py  sanitizer.py  storage.py
projects/eds_to_rjn/exports/: export_eds_points_neo.txt
projects/eds_to_rjn/queries/: default-queries.toml  points-maxson.csv  points-stiles.csv  timestamps_success.json
projects/eds_to_rjn/scripts/: collector copy.py  collector.py  collector_copy.py  daemon_runner.py  main.py  test_time.py
projects/eds_to_rjn/secrets/: README.md
src/example/: webapi_rest_get_tabular_trend_custom_config.py  webapi_rest_get_tabular_trend_custom_config.py.txt
src/pipeline/: calls.py  configrationmanager.py  env.py  helpers.py  projectmanager.py  queriesmanager.py  services.py
src/pipeline/api/: eds.py  rjn.py
src/pipeline/daemon/: controller.py
