[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "API access for reading from the EDS and writing to https://rjn-clarity-api.com/v1/clarity"
authors = ["George Clayton Bennett <george.bennett@memphistn.gov>"]
license = "BSD-3"
readme = "README.md"
packages = [{ include = "pipeline", from = "src" }] 


[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
requests = ">=2.32.3,<3.0.0"
textual = ">=3.1.0,<4.0.0"
toml = ">=0.10.2,<0.11.0"
dotenv = ">=0.9.9,<0.10.0"
pyyaml = ">=6.0.2,<7.0.0"
certifi = ">=2025.1.31,<2026.0.0"
schedule = ">=1.2.2,<2.0.0"
fastapi = ">=0.115.12,<0.116.0"
psutil = "^7.0.0"
urllib3 = "^2.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."scripts"]
controller = "pipeline.daemon.controller:main_cli"
